chore: changed package name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
-name: google_maps_flutter
+name: miaguila_google_maps_flutter
 description: A Flutter plugin for integrating Google Maps in iOS and Android applications.
-homepage: https://github.com/flutter/plugins/tree/master/packages/google_maps_flutter/google_maps_flutter
+homepage: https://github.com/miaguila/google_maps_flutter
 version: 1.0.7
-publish_to: none
+publish_to: 'none'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_plugin_android_lifecycle: ^1.0.0
-  google_maps_flutter_platform_interface:
+  miaguila_google_maps_flutter_platform_interface:
     git:
       url: git://github.com/MiAguila/google_maps_flutter_platform_interface.git
 
